@@ -62,7 +62,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: odbc.c,v 1.117 2003-01-07 14:42:50 freddy77 Exp $";
+static char software_version[] = "$Id: odbc.c,v 1.118 2003-01-07 19:54:05 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static SQLRETURN SQL_API _SQLAllocConnect(SQLHENV henv, SQLHDBC FAR * phdbc);
@@ -1670,16 +1670,6 @@ SQLGetData(SQLHSTMT hstmt, SQLUSMALLINT icol, SQLSMALLINT fCType, SQLPOINTER rgb
 	return SQL_SUCCESS;
 }
 
-static void
-_set_func_exists(SQLUSMALLINT FAR * pfExists, SQLUSMALLINT fFunction)
-{
-	SQLUSMALLINT FAR *mod;
-
-	mod = pfExists + (fFunction >> 4);
-	*mod |= (1 << (fFunction & 0x0f));
-}
-
-
 SQLRETURN SQL_API
 SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExists)
 {
@@ -1694,217 +1684,279 @@ SQLGetFunctions(SQLHDBC hdbc, SQLUSMALLINT fFunction, SQLUSMALLINT FAR * pfExist
 			pfExists[i] = 0;
 		}
 		
-#define FUNC(n) if (n >= 0 && n < (16*SQL_API_ODBC3_ALL_FUNCTIONS_SIZE)) pfExists[n/16] |= (1 << n%16);
-#define NO_FUNC(n)
-#define FUNC3(n) if (n >= 0 && n < (16*SQL_API_ODBC3_ALL_FUNCTIONS_SIZE)) pfExists[n/16] |= (1 << n%16);
-#define NO_FUNC3(n)
-		FUNC(SQL_API_SQLALLOCCONNECT);
-		FUNC(SQL_API_SQLALLOCENV);
-		FUNC3(SQL_API_SQLALLOCHANDLE);
-		FUNC(SQL_API_SQLALLOCSTMT);
-		FUNC(SQL_API_SQLBINDCOL);
-		FUNC(SQL_API_SQLBINDPARAMETER);
-		NO_FUNC(SQL_API_SQLBROWSECONNECT);
-		NO_FUNC3(SQL_API_SQLBULKOPERATIONS);
-		FUNC(SQL_API_SQLCANCEL);
-		NO_FUNC3(SQL_API_SQLCLOSECURSOR);
-		NO_FUNC3(SQL_API_SQLCOLATTRIBUTE);
-		FUNC(SQL_API_SQLCOLATTRIBUTES);
-		NO_FUNC(SQL_API_SQLCOLUMNPRIVILEGES);
-		FUNC(SQL_API_SQLCOLUMNS);
-		FUNC(SQL_API_SQLCONNECT);
-		NO_FUNC3(SQL_API_SQLCOPYDESC);
-		FUNC(SQL_API_SQLDESCRIBECOL);
-		NO_FUNC(SQL_API_SQLDESCRIBEPARAM);
-		FUNC(SQL_API_SQLDISCONNECT);
-		FUNC(SQL_API_SQLDRIVERCONNECT);
-		NO_FUNC3(SQL_API_SQLENDTRAN);
-		FUNC(SQL_API_SQLERROR);
-		FUNC(SQL_API_SQLEXECDIRECT);
-		FUNC(SQL_API_SQLEXECUTE);
-		NO_FUNC(SQL_API_SQLEXTENDEDFETCH);
-		FUNC(SQL_API_SQLFETCH);
-		NO_FUNC3(SQL_API_SQLFETCHSCROLL);
-		NO_FUNC(SQL_API_SQLFOREIGNKEYS);
-		FUNC(SQL_API_SQLFREECONNECT);
-		FUNC(SQL_API_SQLFREEENV);
-		FUNC3(SQL_API_SQLFREEHANDLE);
-		FUNC(SQL_API_SQLFREESTMT);
-		NO_FUNC3(SQL_API_SQLGETCONNECTATTR);
-		FUNC(SQL_API_SQLGETCONNECTOPTION);
-		NO_FUNC(SQL_API_SQLGETCURSORNAME);
-		FUNC(SQL_API_SQLGETDATA);
-		NO_FUNC3(SQL_API_SQLGETDESCFIELD);
-		NO_FUNC3(SQL_API_SQLGETDESCREC);
-		FUNC3(SQL_API_SQLGETDIAGFIELD);
-		FUNC3(SQL_API_SQLGETDIAGREC);
-		NO_FUNC3(SQL_API_SQLGETENVATTR);
-		FUNC(SQL_API_SQLGETFUNCTIONS);
-		FUNC(SQL_API_SQLGETINFO);
-		FUNC3(SQL_API_SQLGETSTMTATTR);
-		FUNC(SQL_API_SQLGETSTMTOPTION);
-		FUNC(SQL_API_SQLGETTYPEINFO);
-		FUNC(SQL_API_SQLMORERESULTS);
-		NO_FUNC(SQL_API_SQLNATIVESQL);
-		FUNC(SQL_API_SQLNUMPARAMS);
-		FUNC(SQL_API_SQLNUMRESULTCOLS);
-		FUNC(SQL_API_SQLPARAMDATA);
-		NO_FUNC(SQL_API_SQLPARAMOPTIONS);
-		FUNC(SQL_API_SQLPREPARE);
-		NO_FUNC(SQL_API_SQLPRIMARYKEYS);
-		NO_FUNC(SQL_API_SQLPROCEDURECOLUMNS);
-		NO_FUNC(SQL_API_SQLPROCEDURES);
-		FUNC(SQL_API_SQLPUTDATA);
-		FUNC(SQL_API_SQLROWCOUNT);
-		FUNC3(SQL_API_SQLSETCONNECTATTR);
-		FUNC(SQL_API_SQLSETCONNECTOPTION);
-		NO_FUNC(SQL_API_SQLSETCURSORNAME);
-		NO_FUNC3(SQL_API_SQLSETDESCFIELD);
-		NO_FUNC3(SQL_API_SQLSETDESCREC);
-		FUNC3(SQL_API_SQLSETENVATTR);
-		NO_FUNC(SQL_API_SQLSETPARAM);
-		NO_FUNC(SQL_API_SQLSETPOS);
-		NO_FUNC(SQL_API_SQLSETSCROLLOPTIONS);
-		NO_FUNC3(SQL_API_SQLSETSTMTATTR);
-		FUNC(SQL_API_SQLSETSTMTOPTION);
-		NO_FUNC(SQL_API_SQLSPECIALCOLUMNS);
-		NO_FUNC(SQL_API_SQLSTATISTICS);
-		NO_FUNC(SQL_API_SQLTABLEPRIVILEGES);
-		FUNC(SQL_API_SQLTABLES);
-		FUNC(SQL_API_SQLTRANSACT);
-#undef FUNC
-#undef NO_FUNC
-#undef FUNC3
-#undef NO_FUNC3
+		/* every api available are contained in a macro 
+		 * all these macro begin with API followed by 2 letter
+		 * first letter mean pre ODBC 3 (_) or ODBC 3 (3)
+		 * second letter mean implemented (X) or unimplemented (_)
+		 * You should copy these macro 3 times... not very good
+		 * but work. Perhaps best method is build the bit array statically
+		 * and then use it but I don't know how to build it...
+		 */
+#define API_X(n) if (n >= 0 && n < (16*SQL_API_ODBC3_ALL_FUNCTIONS_SIZE)) pfExists[n/16] |= (1 << n%16);
+#define API__(n)
+#define API3X(n) if (n >= 0 && n < (16*SQL_API_ODBC3_ALL_FUNCTIONS_SIZE)) pfExists[n/16] |= (1 << n%16);
+#define API3_(n)
+		API_X(SQL_API_SQLALLOCCONNECT);
+		API_X(SQL_API_SQLALLOCENV);
+		API3X(SQL_API_SQLALLOCHANDLE);
+		API_X(SQL_API_SQLALLOCSTMT);
+		API_X(SQL_API_SQLBINDCOL);
+		API_X(SQL_API_SQLBINDPARAMETER);
+		API__(SQL_API_SQLBROWSECONNECT);
+		API3_(SQL_API_SQLBULKOPERATIONS);
+		API_X(SQL_API_SQLCANCEL);
+		API3_(SQL_API_SQLCLOSECURSOR);
+		API3_(SQL_API_SQLCOLATTRIBUTE);
+		API_X(SQL_API_SQLCOLATTRIBUTES);
+		API__(SQL_API_SQLCOLUMNPRIVILEGES);
+		API_X(SQL_API_SQLCOLUMNS);
+		API_X(SQL_API_SQLCONNECT);
+		API3_(SQL_API_SQLCOPYDESC);
+		API_X(SQL_API_SQLDESCRIBECOL);
+		API__(SQL_API_SQLDESCRIBEPARAM);
+		API_X(SQL_API_SQLDISCONNECT);
+		API_X(SQL_API_SQLDRIVERCONNECT);
+		API3_(SQL_API_SQLENDTRAN);
+		API_X(SQL_API_SQLERROR);
+		API_X(SQL_API_SQLEXECDIRECT);
+		API_X(SQL_API_SQLEXECUTE);
+		API__(SQL_API_SQLEXTENDEDFETCH);
+		API_X(SQL_API_SQLFETCH);
+		API3_(SQL_API_SQLFETCHSCROLL);
+		API__(SQL_API_SQLFOREIGNKEYS);
+		API_X(SQL_API_SQLFREECONNECT);
+		API_X(SQL_API_SQLFREEENV);
+		API3X(SQL_API_SQLFREEHANDLE);
+		API_X(SQL_API_SQLFREESTMT);
+		API3_(SQL_API_SQLGETCONNECTATTR);
+		API_X(SQL_API_SQLGETCONNECTOPTION);
+		API__(SQL_API_SQLGETCURSORNAME);
+		API_X(SQL_API_SQLGETDATA);
+		API3_(SQL_API_SQLGETDESCFIELD);
+		API3_(SQL_API_SQLGETDESCREC);
+		API3X(SQL_API_SQLGETDIAGFIELD);
+		API3X(SQL_API_SQLGETDIAGREC);
+		API3_(SQL_API_SQLGETENVATTR);
+		API_X(SQL_API_SQLGETFUNCTIONS);
+		API_X(SQL_API_SQLGETINFO);
+		API3X(SQL_API_SQLGETSTMTATTR);
+		API_X(SQL_API_SQLGETSTMTOPTION);
+		API_X(SQL_API_SQLGETTYPEINFO);
+		API_X(SQL_API_SQLMORERESULTS);
+		API__(SQL_API_SQLNATIVESQL);
+		API_X(SQL_API_SQLNUMPARAMS);
+		API_X(SQL_API_SQLNUMRESULTCOLS);
+		API_X(SQL_API_SQLPARAMDATA);
+		API__(SQL_API_SQLPARAMOPTIONS);
+		API_X(SQL_API_SQLPREPARE);
+		API__(SQL_API_SQLPRIMARYKEYS);
+		API__(SQL_API_SQLPROCEDURECOLUMNS);
+		API__(SQL_API_SQLPROCEDURES);
+		API_X(SQL_API_SQLPUTDATA);
+		API_X(SQL_API_SQLROWCOUNT);
+		API3X(SQL_API_SQLSETCONNECTATTR);
+		API_X(SQL_API_SQLSETCONNECTOPTION);
+		API__(SQL_API_SQLSETCURSORNAME);
+		API3_(SQL_API_SQLSETDESCFIELD);
+		API3_(SQL_API_SQLSETDESCREC);
+		API3X(SQL_API_SQLSETENVATTR);
+		API__(SQL_API_SQLSETPARAM);
+		API__(SQL_API_SQLSETPOS);
+		API__(SQL_API_SQLSETSCROLLOPTIONS);
+		API3_(SQL_API_SQLSETSTMTATTR);
+		API_X(SQL_API_SQLSETSTMTOPTION);
+		API__(SQL_API_SQLSPECIALCOLUMNS);
+		API__(SQL_API_SQLSTATISTICS);
+		API__(SQL_API_SQLTABLEPRIVILEGES);
+		API_X(SQL_API_SQLTABLES);
+		API_X(SQL_API_SQLTRANSACT);
+#undef API_X
+#undef API__
+#undef API3X
+#undef API3_
 		return SQL_SUCCESS;
 #endif
 
 	case SQL_API_ALL_FUNCTIONS:
 		tdsdump_log(TDS_DBG_FUNC, "odbc:SQLGetFunctions: " "fFunction is SQL_API_ALL_FUNCTIONS\n");
 		for (i = 0; i < 100; ++i) {
-			pfExists[i] = 0;
+			pfExists[i] = SQL_FALSE;
 		}
 		
-#define FUNC(n) if (n >= 0 && n <= 800) pfExists[n/16] |= (1 << n%16);
-#define NO_FUNC(n)
-		FUNC(SQL_API_SQLALLOCCONNECT);
-		FUNC(SQL_API_SQLALLOCENV);
-		FUNC(SQL_API_SQLALLOCSTMT);
-		FUNC(SQL_API_SQLBINDCOL);
-		FUNC(SQL_API_SQLBINDPARAMETER);
-		FUNC(SQL_API_SQLCANCEL);
-		FUNC(SQL_API_SQLCOLATTRIBUTES);
-		FUNC(SQL_API_SQLCOLUMNS);
-		FUNC(SQL_API_SQLCONNECT);
-		FUNC(SQL_API_SQLDRIVERCONNECT);
-		FUNC(SQL_API_SQLDESCRIBECOL);
-		FUNC(SQL_API_SQLDISCONNECT);
-		FUNC(SQL_API_SQLERROR);
-		FUNC(SQL_API_SQLEXECDIRECT);
-		FUNC(SQL_API_SQLEXECUTE);
-		FUNC(SQL_API_SQLFETCH);
-		FUNC(SQL_API_SQLFREECONNECT);
-		FUNC(SQL_API_SQLFREEENV);
-		FUNC(SQL_API_SQLFREESTMT);
-		FUNC(SQL_API_SQLGETCONNECTOPTION);
-		NO_FUNC(SQL_API_SQLGETCURSORNAME);
-		FUNC(SQL_API_SQLGETDATA);
-		FUNC(SQL_API_SQLGETFUNCTIONS);
-		FUNC(SQL_API_SQLGETINFO);
-		FUNC(SQL_API_SQLGETSTMTOPTION);
-		FUNC(SQL_API_SQLGETTYPEINFO);
-		FUNC(SQL_API_SQLMORERESULTS);
-		FUNC(SQL_API_SQLNUMPARAMS);
-		FUNC(SQL_API_SQLNUMRESULTCOLS);
-		FUNC(SQL_API_SQLPARAMDATA);
-		FUNC(SQL_API_SQLPREPARE);
-		FUNC(SQL_API_SQLPUTDATA);
-		FUNC(SQL_API_SQLROWCOUNT);
-		FUNC(SQL_API_SQLSETCONNECTOPTION);
-		NO_FUNC(SQL_API_SQLSETCURSORNAME);
-		NO_FUNC(SQL_API_SQLSETPARAM);
-		FUNC(SQL_API_SQLSETSTMTOPTION);
-		NO_FUNC(SQL_API_SQLSPECIALCOLUMNS);
-		NO_FUNC(SQL_API_SQLSTATISTICS);
-		FUNC(SQL_API_SQLTABLES);
-		FUNC(SQL_API_SQLTRANSACT);
-#undef FUNC
-#undef NO_FUNC
-#undef FUNC3
-#undef NO_FUNC3
+#define API_X(n) if (n >= 0 && n < 100) pfExists[n] = SQL_TRUE;
+#define API__(n)
+#define API3X(n)
+#define API3_(n)
+		API_X(SQL_API_SQLALLOCCONNECT);
+		API_X(SQL_API_SQLALLOCENV);
+		API3X(SQL_API_SQLALLOCHANDLE);
+		API_X(SQL_API_SQLALLOCSTMT);
+		API_X(SQL_API_SQLBINDCOL);
+		API_X(SQL_API_SQLBINDPARAMETER);
+		API__(SQL_API_SQLBROWSECONNECT);
+		API3_(SQL_API_SQLBULKOPERATIONS);
+		API_X(SQL_API_SQLCANCEL);
+		API3_(SQL_API_SQLCLOSECURSOR);
+		API3_(SQL_API_SQLCOLATTRIBUTE);
+		API_X(SQL_API_SQLCOLATTRIBUTES);
+		API__(SQL_API_SQLCOLUMNPRIVILEGES);
+		API_X(SQL_API_SQLCOLUMNS);
+		API_X(SQL_API_SQLCONNECT);
+		API3_(SQL_API_SQLCOPYDESC);
+		API_X(SQL_API_SQLDESCRIBECOL);
+		API__(SQL_API_SQLDESCRIBEPARAM);
+		API_X(SQL_API_SQLDISCONNECT);
+		API_X(SQL_API_SQLDRIVERCONNECT);
+		API3_(SQL_API_SQLENDTRAN);
+		API_X(SQL_API_SQLERROR);
+		API_X(SQL_API_SQLEXECDIRECT);
+		API_X(SQL_API_SQLEXECUTE);
+		API__(SQL_API_SQLEXTENDEDFETCH);
+		API_X(SQL_API_SQLFETCH);
+		API3_(SQL_API_SQLFETCHSCROLL);
+		API__(SQL_API_SQLFOREIGNKEYS);
+		API_X(SQL_API_SQLFREECONNECT);
+		API_X(SQL_API_SQLFREEENV);
+		API3X(SQL_API_SQLFREEHANDLE);
+		API_X(SQL_API_SQLFREESTMT);
+		API3_(SQL_API_SQLGETCONNECTATTR);
+		API_X(SQL_API_SQLGETCONNECTOPTION);
+		API__(SQL_API_SQLGETCURSORNAME);
+		API_X(SQL_API_SQLGETDATA);
+		API3_(SQL_API_SQLGETDESCFIELD);
+		API3_(SQL_API_SQLGETDESCREC);
+		API3X(SQL_API_SQLGETDIAGFIELD);
+		API3X(SQL_API_SQLGETDIAGREC);
+		API3_(SQL_API_SQLGETENVATTR);
+		API_X(SQL_API_SQLGETFUNCTIONS);
+		API_X(SQL_API_SQLGETINFO);
+		API3X(SQL_API_SQLGETSTMTATTR);
+		API_X(SQL_API_SQLGETSTMTOPTION);
+		API_X(SQL_API_SQLGETTYPEINFO);
+		API_X(SQL_API_SQLMORERESULTS);
+		API__(SQL_API_SQLNATIVESQL);
+		API_X(SQL_API_SQLNUMPARAMS);
+		API_X(SQL_API_SQLNUMRESULTCOLS);
+		API_X(SQL_API_SQLPARAMDATA);
+		API__(SQL_API_SQLPARAMOPTIONS);
+		API_X(SQL_API_SQLPREPARE);
+		API__(SQL_API_SQLPRIMARYKEYS);
+		API__(SQL_API_SQLPROCEDURECOLUMNS);
+		API__(SQL_API_SQLPROCEDURES);
+		API_X(SQL_API_SQLPUTDATA);
+		API_X(SQL_API_SQLROWCOUNT);
+		API3X(SQL_API_SQLSETCONNECTATTR);
+		API_X(SQL_API_SQLSETCONNECTOPTION);
+		API__(SQL_API_SQLSETCURSORNAME);
+		API3_(SQL_API_SQLSETDESCFIELD);
+		API3_(SQL_API_SQLSETDESCREC);
+		API3X(SQL_API_SQLSETENVATTR);
+		API__(SQL_API_SQLSETPARAM);
+		API__(SQL_API_SQLSETPOS);
+		API__(SQL_API_SQLSETSCROLLOPTIONS);
+		API3_(SQL_API_SQLSETSTMTATTR);
+		API_X(SQL_API_SQLSETSTMTOPTION);
+		API__(SQL_API_SQLSPECIALCOLUMNS);
+		API__(SQL_API_SQLSTATISTICS);
+		API__(SQL_API_SQLTABLEPRIVILEGES);
+		API_X(SQL_API_SQLTABLES);
+		API_X(SQL_API_SQLTRANSACT);
+#undef API_X
+#undef API__
+#undef API3X
+#undef API3_
 		return SQL_SUCCESS;
 		break;
-#define FUNC(n) case n:
-#define NO_FUNC(n)
-		FUNC(SQL_API_SQLALLOCCONNECT);
-		FUNC(SQL_API_SQLALLOCENV);
-		FUNC(SQL_API_SQLALLOCSTMT);
-		FUNC(SQL_API_SQLBINDCOL);
-		FUNC(SQL_API_SQLBINDPARAMETER);
-		FUNC(SQL_API_SQLCANCEL);
-		FUNC(SQL_API_SQLCOLATTRIBUTES);
-		FUNC(SQL_API_SQLCOLUMNS);
-		FUNC(SQL_API_SQLCONNECT);
-		FUNC(SQL_API_SQLDRIVERCONNECT);
-		FUNC(SQL_API_SQLDESCRIBECOL);
-		FUNC(SQL_API_SQLDISCONNECT);
-		FUNC(SQL_API_SQLERROR);
-		FUNC(SQL_API_SQLEXECDIRECT);
-		FUNC(SQL_API_SQLEXECUTE);
-		FUNC(SQL_API_SQLFETCH);
-		FUNC(SQL_API_SQLFREECONNECT);
-		FUNC(SQL_API_SQLFREEENV);
-		FUNC(SQL_API_SQLFREESTMT);
-		FUNC(SQL_API_SQLGETCONNECTOPTION);
-		NO_FUNC(SQL_API_SQLGETCURSORNAME);
-		FUNC(SQL_API_SQLGETDATA);
-		FUNC(SQL_API_SQLGETFUNCTIONS);
-		FUNC(SQL_API_SQLGETINFO);
-		FUNC(SQL_API_SQLGETSTMTOPTION);
-		FUNC(SQL_API_SQLGETTYPEINFO);
-		FUNC(SQL_API_SQLMORERESULTS);
-		FUNC(SQL_API_SQLNUMPARAMS);
-		FUNC(SQL_API_SQLNUMRESULTCOLS);
-		FUNC(SQL_API_SQLPARAMDATA);
-		FUNC(SQL_API_SQLPREPARE);
-		FUNC(SQL_API_SQLPUTDATA);
-		FUNC(SQL_API_SQLROWCOUNT);
-		FUNC(SQL_API_SQLSETCONNECTOPTION);
-		NO_FUNC(SQL_API_SQLSETCURSORNAME);
-		NO_FUNC(SQL_API_SQLSETPARAM);
-		FUNC(SQL_API_SQLSETSTMTOPTION);
-		NO_FUNC(SQL_API_SQLSPECIALCOLUMNS);
-		NO_FUNC(SQL_API_SQLSTATISTICS);
-		FUNC(SQL_API_SQLTABLES);
-		FUNC(SQL_API_SQLTRANSACT);
+#define API_X(n) case n:
+#define API__(n)
 #if (ODBCVER >= 0x300)
-		FUNC(SQL_API_SQLALLOCHANDLE);
-		NO_FUNC(SQL_API_SQLCLOSECURSOR);
-		NO_FUNC(SQL_API_SQLCOPYDESC);
-		NO_FUNC(SQL_API_SQLENDTRAN);
-		NO_FUNC(SQL_API_SQLFETCHSCROLL);
-		NO_FUNC(SQL_API_SQLGETCONNECTATTR);
-		FUNC(SQL_API_SQLFREEHANDLE);
-		NO_FUNC(SQL_API_SQLGETDESCFIELD);
-		NO_FUNC(SQL_API_SQLGETDESCREC);
-		FUNC(SQL_API_SQLGETDIAGFIELD);
-		FUNC(SQL_API_SQLGETDIAGREC);
-		NO_FUNC(SQL_API_SQLGETENVATTR);
-		FUNC(SQL_API_SQLGETSTMTATTR);
-		FUNC(SQL_API_SQLSETCONNECTATTR);
-		NO_FUNC(SQL_API_SQLSETDESCFIELD);
-		NO_FUNC(SQL_API_SQLSETDESCREC);
-		FUNC(SQL_API_SQLSETENVATTR);
-		NO_FUNC(SQL_API_SQLSETSTMTATTR);
+#define API3X(n) case n:
+#else
+#define API3X(n)
 #endif
-#undef FUNC
-#undef NO_FUNC
-#undef FUNC3
-#undef NO_FUNC3
-		*pfExists = 1;	/* SQL_TRUE */
+#define API3_(n)
+		API_X(SQL_API_SQLALLOCCONNECT);
+		API_X(SQL_API_SQLALLOCENV);
+		API3X(SQL_API_SQLALLOCHANDLE);
+		API_X(SQL_API_SQLALLOCSTMT);
+		API_X(SQL_API_SQLBINDCOL);
+		API_X(SQL_API_SQLBINDPARAMETER);
+		API__(SQL_API_SQLBROWSECONNECT);
+		API3_(SQL_API_SQLBULKOPERATIONS);
+		API_X(SQL_API_SQLCANCEL);
+		API3_(SQL_API_SQLCLOSECURSOR);
+		API3_(SQL_API_SQLCOLATTRIBUTE);
+		API_X(SQL_API_SQLCOLATTRIBUTES);
+		API__(SQL_API_SQLCOLUMNPRIVILEGES);
+		API_X(SQL_API_SQLCOLUMNS);
+		API_X(SQL_API_SQLCONNECT);
+		API3_(SQL_API_SQLCOPYDESC);
+		API_X(SQL_API_SQLDESCRIBECOL);
+		API__(SQL_API_SQLDESCRIBEPARAM);
+		API_X(SQL_API_SQLDISCONNECT);
+		API_X(SQL_API_SQLDRIVERCONNECT);
+		API3_(SQL_API_SQLENDTRAN);
+		API_X(SQL_API_SQLERROR);
+		API_X(SQL_API_SQLEXECDIRECT);
+		API_X(SQL_API_SQLEXECUTE);
+		API__(SQL_API_SQLEXTENDEDFETCH);
+		API_X(SQL_API_SQLFETCH);
+		API3_(SQL_API_SQLFETCHSCROLL);
+		API__(SQL_API_SQLFOREIGNKEYS);
+		API_X(SQL_API_SQLFREECONNECT);
+		API_X(SQL_API_SQLFREEENV);
+		API3X(SQL_API_SQLFREEHANDLE);
+		API_X(SQL_API_SQLFREESTMT);
+		API3_(SQL_API_SQLGETCONNECTATTR);
+		API_X(SQL_API_SQLGETCONNECTOPTION);
+		API__(SQL_API_SQLGETCURSORNAME);
+		API_X(SQL_API_SQLGETDATA);
+		API3_(SQL_API_SQLGETDESCFIELD);
+		API3_(SQL_API_SQLGETDESCREC);
+		API3X(SQL_API_SQLGETDIAGFIELD);
+		API3X(SQL_API_SQLGETDIAGREC);
+		API3_(SQL_API_SQLGETENVATTR);
+		API_X(SQL_API_SQLGETFUNCTIONS);
+		API_X(SQL_API_SQLGETINFO);
+		API3X(SQL_API_SQLGETSTMTATTR);
+		API_X(SQL_API_SQLGETSTMTOPTION);
+		API_X(SQL_API_SQLGETTYPEINFO);
+		API_X(SQL_API_SQLMORERESULTS);
+		API__(SQL_API_SQLNATIVESQL);
+		API_X(SQL_API_SQLNUMPARAMS);
+		API_X(SQL_API_SQLNUMRESULTCOLS);
+		API_X(SQL_API_SQLPARAMDATA);
+		API__(SQL_API_SQLPARAMOPTIONS);
+		API_X(SQL_API_SQLPREPARE);
+		API__(SQL_API_SQLPRIMARYKEYS);
+		API__(SQL_API_SQLPROCEDURECOLUMNS);
+		API__(SQL_API_SQLPROCEDURES);
+		API_X(SQL_API_SQLPUTDATA);
+		API_X(SQL_API_SQLROWCOUNT);
+		API3X(SQL_API_SQLSETCONNECTATTR);
+		API_X(SQL_API_SQLSETCONNECTOPTION);
+		API__(SQL_API_SQLSETCURSORNAME);
+		API3_(SQL_API_SQLSETDESCFIELD);
+		API3_(SQL_API_SQLSETDESCREC);
+		API3X(SQL_API_SQLSETENVATTR);
+		API__(SQL_API_SQLSETPARAM);
+		API__(SQL_API_SQLSETPOS);
+		API__(SQL_API_SQLSETSCROLLOPTIONS);
+		API3_(SQL_API_SQLSETSTMTATTR);
+		API_X(SQL_API_SQLSETSTMTOPTION);
+		API__(SQL_API_SQLSPECIALCOLUMNS);
+		API__(SQL_API_SQLSTATISTICS);
+		API__(SQL_API_SQLTABLEPRIVILEGES);
+		API_X(SQL_API_SQLTABLES);
+		API_X(SQL_API_SQLTRANSACT);
+#undef API_X
+#undef API__
+#undef API3X
+#undef API3_
+		*pfExists = SQL_TRUE;
 		return SQL_SUCCESS;
 	default:
-		*pfExists = 0;
+		*pfExists = SQL_FALSE;
 		return SQL_SUCCESS;
 		break;
 	}
